<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="lancer_xctrack">Run XCTrack</string>
    <string name="erreur_lancement_app">Impossible to run the application.</string>
    <string name="liste_vide">Empty list</string>
    <string name="fichiers">Files</string>
    <string name="erreur">Error</string>
    <string name="erreur_requete">Request error</string>
    <string name="danger_message">Download \"danger\" zones</string>
    <string name="message_download_fichier">File downloaded :</string>
    <string name="message_creation_fichier_terminee">Files created :</string>
    <string name="erreur_internet">No file received.\nCheck your internet connexion.</string>
    <string name="titre_liste_fichiers">File list :</string>
    <string name="app_name">AIR³ Manager</string>
    <string name="boot_message">Launch XCTrack on boot</string>
    <string name="download_au_demarrage">Download Openair file on boot</string>
    <string name="action_liste_fichiers">File list</string>
    <string name="identification">Identification</string>
    <string name="identification_terminee">Account selection finished</string>
    <string name="sauver_fichier">Send this file to XCTrack ?</string>
    <string name="fichier">File</string>
    <string name="envoyer">Send</string>
    <string name="annuler">Cancel</string>
    <string name="erreur_acces">No file received.\nCheck your access to shared files.</string>
    <string name="mauvaise_date">The file date does not match today\'s date.</string>
    <string name="titre_a_propos_de">About</string>
    <string name="titre_a_propos">About</string>
    <string name="version">Release</string>
    <string name="developpe_par">Developed by</string>
    <string name="web">Web</string>
    <string name="erreur_suppression">Error : Impossible to delete files.</string>
    <string name="nb_messages_sup">Number of files deleted</string>
    <string name="titre_suppression_fichiers">Delete files</string>
    <string name="aucun_fichier_a_supprimer">No file to delete.</string>
    <string name="confirmer_suppression">Delete airspace files ?</string>
    <string name="confirmer_suppression_suite">(only old OA.xx.xx.xx files on XCTrack)</string>
    <string name="supprimer">Delete</string>
    <string name="reset_interface">Reset</string>
    <string name="reset_termine">The interface will be reset at the next start of XCTrack.</string>
    <string name="change_interface">Change interface</string>
    <string name="changement_interface_termine">The interface will be updated at the next start of XCTrack.</string>
    <string name="action_interfaces">XCTrack Interface</string>
    <string name="confirmer_reset">If you confirm, ALL your personal customizations of XCTrack will be lost.</string>
    <string name="titre_reset">Reset XCTRack customization</string>
    <string name="erreur_copie">Impossible to copy bootstrap file.</string>
    <string name="confirmer_interface">Check the boxes to confirm the changes :</string>
    <string name="titre_interface">Interface changes</string>
    <string name="change">Change</string>
    <string name="demande_acces_contacts">You need to allow access to Contacts</string>
    <string name="titre_demande_acces_contacts">Contacts access</string>
    <string name="bouton_demande_acces_contacts">Allow access</string>
    <string name="demande_acces">Please send a request to grant a permanent acces to the Openair files.</string>
    <string name="titre_demande_acces">Authorization required</string>
    <string name="bouton_demande">Send request</string>
    <string name="confirmer_demande_acces">An email will be sent to request a permanent acces to Openair files. You will receive a response by email within 24h.</string>
    <string name="titre_confirmer_demande_acces">Confirm request</string>
    <string name="sujet_email" translatable="false">Demande d\\\'acces à Openair</string>
    <string name="erreur_envoie_message">Error sending email</string>
    <string name="attention">Attention</string>
    <string name="message_envoye">The authorization request has been sent.</string>
    <string name="titre_message_envoye">Request sent</string>
    <string name="version_number" translatable="false">2.15</string>
    <string name="action_upgrades">Check for upgrades</string>
    <string name="titre_upgrades">Upgrades</string>
    <string name="message_upgrades">You can find more informations about upgrades on our website.</string>
    <string name="erreur_acces_via_bouton">You can\'t get Openair files from a Google Drive, check details on our web site.</string>
    <string name="bouton_website">Website</string>
    <string name="action_download_fichier">Download Openair file</string >
    <string name="delay_xctrack_launch_on_boot">Delay XCTrack launch on boot</string>
    <string name="enable_download">Download Openair file</string>
    <string name="titre_installation_upgrader">Installation requise</string>
    <string name="message_installation_upgrader">L\'application AIR³ Upgrader doit être installée pour effectuer les mises à jour. Voulez-vous la télécharger ?</string>
    <string name="bouton_download">Télécharger</string>
    <string name="about_text">Version : \nWeb : www.fly-air3.com\nDéveloppé par : O. Legrand &amp; B. Fontaine</string>
    <string name="xctrack_launch">XCTrack Launch</string>
    <string name="xctrack_interface">XCTrack Interface</string>
    <string name="xcguide_launch">XC Guide Launch</string>
    <string name="check_for_upgrades">Check for Upgrades</string>
    <string name="brand_error_message">This app is only compatible with AIR3 devices.</string>
    <string name="confirm">Confirm</string>
    <string name="select_device">Select your device</string>
    <string name="what_is_my_air3_version">What is my AIR3 version?</string>
    <string name="device_name_confirmation_title">Confirm Device Name</string>
    <string name="device_name_confirmation_message">Use Device name instead of an allowed model? Device name should strictly follow the following structure to work "AIR3-?.?".</string>
    <string name="unknown_device">Unknown device</string>
    <string name="ok">OK</string>
    <string name="change_profile">- Change profile</string>
    <string name="or_reset">- Or reset</string>
    <string name="device_not_compatible">Device not compatible</string>
    <string name="error">Error</string>
    <string name="download_not_supported_title">Download not supported</string>
    <string name="download_not_supported_message">This feature is no longer supported. If you wish to use this feature, please use a previous version of AIR³ Manager. Prefer XCTrack Airspace instead</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="boot_message_xcguide">Launch XC Guide on boot</string>
    <string name="delay_xctrack_confirmation_message">XC Guide needs time to initialise to work properly before XCTrack is launched. Are you sure you want to disable this feature?</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>