<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xc.r3.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_interfaces"
        android:title="@string/action_interfaces"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_download_fichier"
        android:title="@string/action_download_fichier"
        android:visible="false"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_liste_fichiers"
        android:title="@string/action_liste_fichiers"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_upgrades"
        android:title="@string/action_upgrades"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_about"
        android:title="@string/titre_a_propos"
        app:showAsAction="never"></item>
</menu>
