<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageXCTrackLaunch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/xctrack_launch"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/imageXCGuideLaunch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/xctrack"
        android:scaleType="fitCenter" />

    <ImageView
        android:id="@+id/imageXCGuideLaunch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/xcguide_launch"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageXCTrackLaunch"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/xcguide"
        android:scaleType="fitCenter" />

    <ImageView
        android:id="@+id/imageXCTrackInterface"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/xctrack_interface"
        app:layout_constraintBottom_toTopOf="@+id/imageCheckForUpgrades"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/imageCheckForUpgrades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageXCTrackLaunch"
        app:srcCompat="@drawable/xctrack_interface"
        android:scaleType="fitCenter" />

    <ImageView
        android:id="@+id/imageCheckForUpgrades"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/check_for_upgrades"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageXCTrackInterface"
        app:layout_constraintTop_toBottomOf="@+id/imageXCGuideLaunch"
        app:srcCompat="@drawable/upgrade"
        android:scaleType="fitCenter" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>