<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/selectDeviceTextView"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:text="@string/select_device"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/model_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <Button
                android:id="@+id/button_confirm"
                android:layout_width="144dp"
                android:layout_height="83dp"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/linkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|left"
        android:padding="26dp"
        android:text="@string/what_is_my_air3_version"
        android:textColor="@color/gray"
        android:textSize="26sp" />
</LinearLayout>